--- a/koha-tmpl/intranet-tmpl/prog/fr/admin/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/admin/branches.tmpl
@@ -46,7 +46,7 @@
         <p><label>Téléphone</label><input type="text" name="branchphone" value="<!-- TMPL_VAR name="branchphone" escape="HTML" -->" /></p>
         <p><label>Fax</label><input type="text" name="branchfax" value="<!-- TMPL_VAR name="branchfax" escape="HTML" -->" /></p>
         <p><label>Email</label><input type="text" name="branchemail" value="<!-- TMPL_VAR name="branchemail" escape="HTML" -->" /></p>
-        <p><label>Identifiant site </label><input type="text" name="branchip" value="<!-- TMPL_VAR name="branchip" escape="HTML" -->" /></p>
+        <p><label>Adresses IP du site </label><input type="text" name="branchip" value="<!-- TMPL_VAR name="branchip" escape="HTML" -->" /></p>
         <p><label>Imprimante du site</label>
             <select id="branchprinter" name="branchprinter">
                 <option value="">Aucun</option>
@@ -90,7 +90,7 @@
             <th>Code</th>
             <th>Adresse</th>
             <th>Catégorie</th>
-            <th>Identifiant site </th>
+            <th>Adresses IP du site </th>
             <th>Imprimante du site</th>
             <th>&nbsp;</th>
             <th>&nbsp;</th>
