--- a/koha-tmpl/intranet-tmpl/prog/fr/authorities/blinddetail-biblio-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/authorities/blinddetail-biblio-search.tmpl
@@ -1,4 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+<Title>Koha -- Détails autorité</title>
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
 <script type="text/javascript">
 
 function go()
@@ -53,4 +56,4 @@ while (i>=0) {
 <script language="javascript" type="text/javascript">
 window.onload = go();
 </script>
-<!-- TMPL_INCLUDE NAME="intranet-bottom" -->
+<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
