--- a/koha-tmpl/intranet-tmpl/prog/fr/circ/branchoverdues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/circ/branchoverdues.tmpl
@@ -22,7 +22,7 @@
 <p>Sélectionnez une localisation
 <form name="selectlocation" action="branchoverdues.pl" method="post">
     <select id="location" name="location">
-        <option value="">Tous les sites</option>
+        <option value="">Toutes les localisations</option>
         <!-- TMPL_LOOP NAME="locationsloop" -->
             <option value="<!-- TMPL_VAR NAME="authorised_value" -->"><!-- TMPL_VAR NAME="lib" --></option>
         <!-- /TMPL_LOOP -->
