--- a/koha-tmpl/intranet-tmpl/prog/fr/serials/checkexpiration.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/serials/checkexpiration.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Dates d'expiration</title>
+<title>Koha &rsaquo; Expiration des abonnements</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- Additions to enable Calendar system -->
