auto focus on login when document is loaded.

--- a/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
@@ -48,4 +48,11 @@
 </form>
 
 <!-- /TMPL_IF -->
+
+<script type="text/javascript">
+// <![CDATA[
+    document.getElementById('userid').focus(); // auto focus on login input when document is loaded.
+// ]]>
+</script>
+
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
