--- a/koha-tmpl/opac-tmpl/prog/en/opac-authoritiessearchresultlist.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-authoritiessearchresultlist.tmpl
@@ -38,7 +38,7 @@
 				<!-- TMPL_UNLESS name="isEDITORS" -->
 					<th width="10%">Biblio records</th>
 				<!-- /TMPL_UNLESS -->
-				<th width="10%">Full Authorized Heading</th>				
+				<th width="10%">Full Heading</th>				
 			</tr>
 			<!-- TMPL_LOOP NAME="result" -->
 				<tr>
