adding a link to opac-detail and removing link to itself.

--- a/koha-tmpl/opac-tmpl/prog/en/opac-ISBDdetail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-ISBDdetail.tmpl
@@ -16,8 +16,8 @@
         <a href="/cgi-bin/koha/opac-MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
             MARC View
         </a>
-        <a href="/cgi-bin/koha/opac-ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-            ISBD
+        <a href="/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+            Normal
         </a>
         <a href="/cgi-bin/koha/opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-detailprint.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">
             Print
