--- a/koha-tmpl/opac-tmpl/prog/en/opac-MARCdetail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-MARCdetail.tmpl
@@ -13,8 +13,8 @@
 		</a>
 	<!-- /TMPL_IF -->
 <!-- /TMPL_UNLESS -->
-        <a href="/cgi-bin/koha/opac-MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
-            MARC View
+        <a href="/cgi-bin/koha/opac-detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
+            Normal
         </a>
         <a href="/cgi-bin/koha/opac-ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
             ISBD
