remove hardcoded link.

--- a/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-results.tmpl
@@ -25,7 +25,7 @@
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="total" -->
-<h3><!-- TMPL_VAR NAME="total" --> results found for '<!-- TMPL_VAR NAME="searchdesc" -->'. <a href="http://o15.bureau.paulpoulain.com/cgi-bin/koha/opac-search.pl">[ Perform a new search ]</a></h3>
+<h3><!-- TMPL_VAR NAME="total" --> results found for '<!-- TMPL_VAR NAME="searchdesc" -->'. <a href="/cgi-bin/koha/opac-search.pl">[ Perform a new search ]</a></h3>
 <!-- TMPL_ELSE -->
 <!-- TMPL_IF NAME="searchdesc" -->
 <h3> No Result found !</h3>
