--- a/koha-tmpl/opac-tmpl/prog/en/opac-advsearch.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-advsearch.tmpl
@@ -442,7 +442,7 @@
 <!-- RANK LIMITS -->
 <!-- SEARCH BUTTONS -->
 <p>
-    <input class="submit" type="submit" accesskey="s" name="do" title="Search" value="Search"/>
+    <input class="submit" type="submit" accesskey="s" name="do" title="Search" value="OK"/>
     <!-- TMPL_IF NAME="expanded_options" -->
         <a href="/cgi-bin/koha/opac-search.pl">[Fewer Options]</a>
     <!-- TMPL_ELSE -->
