--- a/koha-tmpl/opac-tmpl/prog/en/opac-authorities-home.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-authorities-home.tmpl
@@ -60,7 +60,7 @@
             </p>
             <p>(add % at the end of your word if you want to use right-truncation : <b>theor%</b> will find theory &amp; theories)</p>
             <p>
-                <input type="submit" value="Start search" class="submit">
+                <input type="submit" value="OK" class="submit">
             </p>
         </div>
     </form>
